--- a/examples/03_cylinder/cylinder_large_scale.ipynb
+++ b/examples/03_cylinder/cylinder_large_scale.ipynb
@@ -627,9 +627,14 @@
     "                               (final_w_dict[var] + res_dict_uncert['std_w_dict'][var] * 3) * 100, \n",
     "                               alpha=.4, color='gray', zorder=-100)\n",
     "    # convergence\n",
-    "    axis.set_title(r'\\textcircled{\\raisebox{-0.9pt}{%d}} %d iters on $\\{%s\\}$, wt=%d s' % (\n",
-    "        final_conv_hist[var]['conv_order'] + 1, final_conv_hist[var]['nit'],\n",
-    "        final_conv_hist[var]['vars'], final_conv_hist[var]['wtime']), fontsize=14)\n",
+    "    if reproduce_paper_fig:\n",
+    "        axis.set_title(r'\\textcircled{\\raisebox{-0.9pt}{%d}} %d iters on $\\{%s\\}$, wt=%d s' % (\n",
+    "            final_conv_hist[var]['conv_order'] + 1, final_conv_hist[var]['nit'],\n",
+    "            final_conv_hist[var]['vars'], final_conv_hist[var]['wtime']), fontsize=14)\n",
+    "    else:\n",
+    "        axis.set_title(r'(%d) %d iters on $\\{%s\\}$, wt=%d s' % (\n",
+    "            final_conv_hist[var]['conv_order'] + 1, final_conv_hist[var]['nit'],\n",
+    "            final_conv_hist[var]['vars'], final_conv_hist[var]['wtime']), fontsize=14)\n",
     "    # error\n",
     "    x = .05 if i != 2 else .55\n",
     "    axis.text(x, .85, r'$|\\Delta\\mathbf{w}|$=%.1E' % (torch.norm(\n",
