--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -366,7 +366,7 @@
     "    # fitted\n",
     "    ax[i][1].plot(q, I, c=c_ffsas, label='FFSAS')\n",
     "    chi2 = torch.norm((I_true - I) / I_true_std) ** 2\n",
-    "    ax[i][1].set_title(r'$I(q)$: bins=%d, $\\chi^2$=%.2E, wt=%.1f sec' % (\n",
+    "    ax[i][1].set_title(r'$I(q)$: bins=%d, $\\chi^2$=%.2E, wt=%.1f s' % (\n",
     "        reso, chi2, wct))\n",
     "    ax[i][1].set_xscale('log')\n",
     "    ax[i][1].set_yscale('log')\n",
@@ -447,15 +447,15 @@
     "I_low = mc_data[:, 3]\n",
     "I_mcsas = interpolate.interp1d(q_low, I_low, fill_value=\"extrapolate\")(q)\n",
     "chi2_mcsas = torch.norm((I_true - I_mcsas) / I_true_std) ** 2\n",
-    "wct_mcsas_min = round(20.9399139841)\n",
+    "wct_mcsas_min = 20.9399139841\n",
     "\n",
     "# plot\n",
     "ax[-1][1].errorbar(q[::st], I_true[::st], I_true[::st] / 1.01, \n",
     "                   markerfacecolor='none', markeredgecolor=c_data, ecolor=c_data, fmt='s',  \n",
     "                   markersize=8, capsize=2, lw=1,\n",
     "                   zorder=-10, label='Truth')\n",
-    "ax[-1][1].plot(q, I_irena, c=c_irena, ls='--', zorder=5, label='Irena, wt=3 sec')\n",
-    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, label='McSAS, wt=%d min' % wct_mcsas_min)\n",
+    "ax[-1][1].plot(q, I_irena, c=c_irena, ls='--', zorder=5, label='Irena, wt=3 s')\n",
+    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, label='McSAS, wt=%d s' % (wct_mcsas_min * 60))\n",
     "ax[-1][1].set_title(r'$I(q)$: $\\chi^2_\\mathrm{Irena}$=%.2E, '\n",
     "                    r'$\\chi^2_\\mathrm{McSAS}$=%.2E' % (chi2_irena, chi2_mcsas))\n",
     "ax[-1][1].set_xscale('log')\n",
