--- a/examples/03_cylinder/cylinder_large_scale.ipynb
+++ b/examples/03_cylinder/cylinder_large_scale.ipynb
@@ -661,7 +661,7 @@
     "ax[0, 1].set_ylim(-3, 8)\n",
     "ax[0, 1].legend(\n",
     "    [ptrue[0], (psigma, pmean[0])], ['Truth', 'Inverted'],\n",
-    "    ncol=2, columnspacing=1, handlelength=1, prop={'size':12}, loc='lower center')\n",
+    "    ncol=2, columnspacing=1, handlelength=1, prop={'size':12}, loc='lower center', facecolor='whitesmoke')\n",
     "\n",
     "if reproduce_paper_fig:\n",
     "    plt.savefig(paper_fig_dir / 'cylinder_w.pdf', \n",
