--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -186,7 +186,7 @@
     "np.savetxt('observation.txt', \n",
     "           torch.stack([q, I_true, I_true_std]).t().numpy())\n",
     "# McSAS use nm^-1 for q\n",
-    "np.savetxt('observation_McSAS.txt', \n",
+    "np.savetxt('mcsas/observation_McSAS.txt', \n",
     "           torch.stack([q * 10, I_true, I_true_std]).t().numpy())"
    ]
   },
