--- a/examples/04_sphere_SANS/sphere_SANS.ipynb
+++ b/examples/04_sphere_SANS/sphere_SANS.ipynb
@@ -86,7 +86,7 @@
     "sigma = torch.tensor(data[:, 2], dtype=ffsas.torch_dtype)\n",
     "\n",
     "# McSAS use nm^-1 for q\n",
-    "np.savetxt('observation_McSAS.txt', \n",
+    "np.savetxt('mcsas/observation_McSAS.txt', \n",
     "           torch.stack([q * 10, mu, sigma]).t().numpy())"
    ]
   },
@@ -379,7 +379,7 @@
     "w_delta[:] = 0\n",
     "w_delta[775] = 1  # location of 710 A is 775\n",
     "# the best-fitting xi and b for monodispersity are found by SasView\n",
-    "scale_delta, b_delta = np.loadtxt('sasview_monodisperse710.txt', skiprows=1)\n",
+    "scale_delta, b_delta = np.loadtxt('sasview/monodisperse710_xi_b.txt', skiprows=1)\n",
     "xi_delta = 1e-4 * scale_delta / (4 / 3 * np.pi * 710 ** 3)\n",
     "I_delta_full = g_sys_full.compute_intensity(w_dict={'r': w_delta}, \n",
     "                                            xi=xi_delta, b=b_delta)\n",
