--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -178,7 +178,7 @@
     "           torch.stack([q, I_true, I_true_std]).t().numpy())\n",
     "\n",
     "# McSAS use nm^-1 for q\n",
-    "np.savetxt('observation_McSAS.txt', \n",
+    "np.savetxt('mcsas/observation_McSAS.txt', \n",
     "           torch.stack([q * 10, I_true, I_true_std]).t().numpy())"
    ]
   },
