--- a/examples/05_sphere_SAXS/sphere_SAXS.ipynb
+++ b/examples/05_sphere_SAXS/sphere_SAXS.ipynb
@@ -382,7 +382,7 @@
     "plt.plot(q[:len(I_irena)], I_irena, c=style_irena[0], ls=style_irena[1], lw=1.5, zorder=0,\n",
     "         label=r'Irena-IPG/TNNLS: $\\chi^2$=%.2f (no high-$q$),' % (chi2))\n",
     "plt.plot(q[:len(I_irena)], I_irena, c='whitesmoke', ls=style_irena[1], lw=1.5, zorder=-10000000, \n",
-    "         label=r'$\\hat{w}=60\\%\\mathcal{N}(620, 39^2)+40\\%\\mathcal{N}(1066, 38^2)$')\n",
+    "         label=r'$\\hat{w}\\approx60\\%\\mathcal{N}(620, 39^2)+40\\%\\mathcal{N}(1066, 38^2)$')\n",
     "\n",
     "# SASView\n",
     "I_sasview = np.loadtxt('sasview/output_I(q).txt', skiprows=1)[:, 1]\n",
@@ -404,7 +404,7 @@
     "plt.plot(q, I, c=style_mcsas[0], ls=style_mcsas[1], lw=1.5, zorder=0,\n",
     "         label=r'McSAS: $\\chi^2$=%.2f,' % (chi2))\n",
     "plt.plot(q, I, c='whitesmoke', ls=style_mcsas[1], lw=1.5, zorder=-10000000, \n",
-    "         label=r'$\\hat{w}=58\\%\\mathcal{N}(629, 20^2)+42\\%\\mathcal{N}(1067, 15^2)$')\n",
+    "         label=r'$\\hat{w}\\approx58\\%\\mathcal{N}(629, 20^2)+42\\%\\mathcal{N}(1067, 15^2)$')\n",
     "\n",
     "# FFSAS\n",
     "I_ffsas = results['I']\n",
@@ -413,7 +413,7 @@
     "plt.plot(q, I, c=style_ffsas[0], ls=style_ffsas[1], lw=1.5, zorder=0,\n",
     "         label=r'FFSAS: $\\chi^2$=%.2f,' % (chi2))\n",
     "plt.plot(q, I, c='whitesmoke', ls=style_ffsas[1], lw=1.5, zorder=-10000000, \n",
-    "         label=r'$\\hat{w}=58\\%\\mathcal{N}(630, 1^2)+42\\%\\mathcal{N}(1060, 1^2)$')\n",
+    "         label=r'$\\hat{w}\\approx58\\%\\mathcal{N}(630, 1^2)+42\\%\\mathcal{N}(1060, 1^2)$')\n",
     "\n",
     "\n",
     "plt.xlim(q[0] / 1.1, q[-50])\n",
