--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -218,7 +218,7 @@
    "outputs": [],
    "source": [
     "# solve the inverse problem using true intensity\n",
-    "result_dict = g_sys.solve_inverse(I_true, I_true_std, maxiter=100, verbose=1,\n",
+    "result_dict = g_sys.solve_inverse(I_true, I_true_std, maxiter=200, verbose=1,\n",
     "                                  trust_options={'xtol': 0., 'gtol': 0.})"
    ]
   },
@@ -374,7 +374,7 @@
     "plt.title(r'(b) Comparing $I(q)$ by different methods')\n",
     "\n",
     "# truth\n",
-    "st = 1\n",
+    "st = 2\n",
     "plot_data = plt.errorbar(q[::st], I_true[::st], yerr=I_true_std[::st] * 3, capsize=1, lw=lw, elinewidth=.5,\n",
     "                         c='k', fmt='-', zorder=-100, label='Truth')\n",
     "plt.xlim(q[0], q[-1])\n",
@@ -433,27 +433,27 @@
     "    return torch.norm((I_fit - I_true) / I_true_std) ** 2\n",
     "    \n",
     "print(f'Intensity chi2')\n",
-    "print(f'Irena: {compute_chi2(I_irena)}')\n",
-    "print(f'SasView: {compute_chi2(I_sasview)}')\n",
-    "print(f'McSAS: {compute_chi2(I_mcsas)}')\n",
-    "print(f'FFSAS: {compute_chi2(I_ffsas)}')\n",
+    "print(f'Irena: {compute_chi2(I_irena):.0e}')\n",
+    "print(f'SasView: {compute_chi2(I_sasview):.0e}')\n",
+    "print(f'McSAS: {compute_chi2(I_mcsas):.0e}')\n",
+    "print(f'FFSAS: {compute_chi2(I_ffsas):.0e}')\n",
     "print()\n",
     "\n",
     "# delta w\n",
     "def compute_delta_w(w_fit):\n",
     "    if not isinstance(w_fit, torch.Tensor):\n",
     "        w_fit = torch.from_numpy(w_fit)\n",
-    "    return torch.norm(w_fit - w_true)\n",
+    "    return torch.norm(w_fit - w_true) ** 2\n",
     "\n",
     "print(f'|delta w|')\n",
-    "print(f'Irena: {compute_delta_w(w_irena)}')\n",
-    "print(f'SasView: {compute_delta_w(w_sasview)}')\n",
-    "print(f'McSAS: {compute_delta_w(w_mcsas)}')\n",
-    "print(f'FFSAS: {compute_delta_w(w_ffsas)}')\n",
+    "print(f'Irena: {compute_delta_w(w_irena):.0e}')\n",
+    "print(f'SasView: {compute_delta_w(w_sasview):.0e}')\n",
+    "print(f'McSAS: {compute_delta_w(w_mcsas):.0e}')\n",
+    "print(f'FFSAS: {compute_delta_w(w_ffsas):.0e}')\n",
     "print()\n",
     "\n",
     "print('wct / sec')\n",
-    "print(f'Irena: 1.5')\n",
+    "print(f'Irena: 2')\n",
     "print(f'SasView: 0.0979')\n",
     "print(f'McSAS: {3.30376664797 * 60}')\n",
     "print(f'FFSAS: {result_dict[\"wct\"]}')"
