--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -443,7 +443,7 @@
     "def compute_delta_w(w_fit):\n",
     "    if not isinstance(w_fit, torch.Tensor):\n",
     "        w_fit = torch.from_numpy(w_fit)\n",
-    "    return torch.norm(w_fit - w_true) ** 2\n",
+    "    return torch.norm(w_fit - w_true)\n",
     "\n",
     "print(f'|delta w|')\n",
     "print(f'Irena: {compute_delta_w(w_irena):.0e}')\n",
