--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -358,13 +358,13 @@
     "    # intensity fitting #\n",
     "    #####################\n",
     "    # truth\n",
-    "    st = 20\n",
+    "    st = 40\n",
     "    ax[i][1].errorbar(q[::st], I_true[::st], I_true[::st] / 1.01, \n",
     "                      markerfacecolor='none', markeredgecolor=c_data, ecolor=c_data, fmt='s',  \n",
     "                      markersize=8, capsize=2, lw=1,\n",
     "                      zorder=-10, label='Truth')\n",
     "    # fitted\n",
-    "    ax[i][1].plot(q, I, c=c_ffsas, label='FFSAS')\n",
+    "    ax[i][1].plot(q, I, c=c_ffsas, label='FFSAS', lw=3)\n",
     "    chi2 = torch.norm((I_true - I) / I_true_std) ** 2\n",
     "    ax[i][1].set_title(r'$I(q)$: bins=%d, $\\chi^2$=%.2E, wt=%.1f s' % (\n",
     "        reso, chi2, wct))\n",
@@ -454,8 +454,8 @@
     "                   markerfacecolor='none', markeredgecolor=c_data, ecolor=c_data, fmt='s',  \n",
     "                   markersize=8, capsize=2, lw=1,\n",
     "                   zorder=-10, label='Truth')\n",
-    "ax[-1][1].plot(q, I_irena, c=c_irena, ls='--', zorder=5, label='Irena, wt=3 s')\n",
-    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, label='McSAS, wt=%d s' % (wct_mcsas_min * 60))\n",
+    "ax[-1][1].plot(q, I_irena, c=c_irena, lw=3, ls='--', zorder=5, label='Irena, wt=3 s')\n",
+    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, lw=3, label='McSAS, wt=%d s' % (wct_mcsas_min * 60))\n",
     "ax[-1][1].set_title(r'$I(q)$: $\\chi^2_\\mathrm{Irena}$=%.2E, '\n",
     "                    r'$\\chi^2_\\mathrm{McSAS}$=%.2E' % (chi2_irena, chi2_mcsas))\n",
     "ax[-1][1].set_xscale('log')\n",
