--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -282,9 +282,11 @@
     "\n",
     "# downsample to make plot cleaner\n",
     "st = 4\n",
+    "st1 = 3\n",
+    "wh = list(range(0, 80, st)) + list(range(80, 160, st1)) + list(range(160, len(r), st))\n",
     "\n",
     "# truth\n",
-    "plot_data = plt.errorbar(r[::st], w_true[::st] * 100, yerr=None, \n",
+    "plot_data = plt.errorbar(r[wh], w_true[wh] * 100, yerr=None, \n",
     "                         c='k', fmt='-', zorder=-100, label='Truth')\n",
     "plt.xlim(r[0], r[-1])\n",
     "\n",
@@ -292,7 +294,7 @@
     "vol_frac = np.loadtxt('irena/output_wv(r).txt')[:len(r)]\n",
     "w_irena = vol_frac / r ** 3\n",
     "w_irena /= w_irena.sum()\n",
-    "plot_irena = plt.errorbar(r[::st], w_irena[::st] * 100, yerr=None, \n",
+    "plot_irena = plt.errorbar(r[wh], w_irena[wh] * 100, yerr=None, \n",
     "                          c=style_irena[0], fmt=style_irena[2],  \n",
     "                          markersize=style_irena[3], label='Irena')\n",
     "\n",
@@ -316,7 +318,7 @@
     "B_xi = B_scale / B_vol\n",
     "w_sasview = A_xi * A_shape + B_xi * B_shape\n",
     "w_sasview /= w_sasview.sum()\n",
-    "plot_sasview = plt.errorbar(r[::st], w_sasview[::st] * 100, yerr=None, \n",
+    "plot_sasview = plt.errorbar(r[wh], w_sasview[wh] * 100, yerr=None, \n",
     "                            c=style_sasview[0], fmt=style_sasview[2],  \n",
     "                            markersize=style_sasview[3], label='SasView')\n",
     "\n",
@@ -332,13 +334,13 @@
     "norm = w_mcsas.sum()\n",
     "w_mcsas /= norm\n",
     "std_w_mcsas /= norm\n",
-    "plot_mcsas = plt.errorbar(r[::st], w_mcsas[::st] * 100, yerr=std_w_mcsas[::st] * 100, \n",
+    "plot_mcsas = plt.errorbar(r[wh], w_mcsas[wh] * 100, yerr=std_w_mcsas[wh] * 100, \n",
     "                          c=style_mcsas[0], fmt=style_mcsas[2],  \n",
     "                          markersize=style_mcsas[3], capsize=1, lw=.5, label='McSAS')\n",
     "\n",
     "# ffsas\n",
     "w_ffsas = result_dict['w_dict']['r']\n",
-    "plot_ffsas = plt.errorbar(r[::st], w_ffsas[::st] * 100, yerr=result_dict['std_w_dict']['r'][::st] * 100, \n",
+    "plot_ffsas = plt.errorbar(r[wh], w_ffsas[wh] * 100, yerr=result_dict['std_w_dict']['r'][wh] * 100, \n",
     "                          c=style_ffsas[0], fmt=style_ffsas[2],  \n",
     "                          markersize=style_ffsas[3], capsize=1, lw=.5, label='FFSAS')\n",
     "\n",
@@ -440,16 +442,29 @@
     "print()\n",
     "\n",
     "# delta w\n",
-    "def compute_delta_w(w_fit):\n",
+    "def compute_delta_w_norm(w_fit):\n",
     "    if not isinstance(w_fit, torch.Tensor):\n",
     "        w_fit = torch.from_numpy(w_fit)\n",
     "    return torch.norm(w_fit - w_true)\n",
     "\n",
+    "def compute_delta_w_max(w_fit):\n",
+    "    if not isinstance(w_fit, torch.Tensor):\n",
+    "        w_fit = torch.from_numpy(w_fit)\n",
+    "    return torch.max(torch.abs(w_fit - w_true))\n",
+    "\n",
+    "\n",
     "print(f'|delta w|')\n",
-    "print(f'Irena: {compute_delta_w(w_irena):.0e}')\n",
-    "print(f'SasView: {compute_delta_w(w_sasview):.0e}')\n",
-    "print(f'McSAS: {compute_delta_w(w_mcsas):.0e}')\n",
-    "print(f'FFSAS: {compute_delta_w(w_ffsas):.0e}')\n",
+    "print(f'Irena: {compute_delta_w_norm(w_irena):.0e}')\n",
+    "print(f'SasView: {compute_delta_w_norm(w_sasview):.0e}')\n",
+    "print(f'McSAS: {compute_delta_w_norm(w_mcsas):.0e}')\n",
+    "print(f'FFSAS: {compute_delta_w_norm(w_ffsas):.0e}')\n",
+    "print()\n",
+    "\n",
+    "print(f'max(delta w)')\n",
+    "print(f'Irena: {compute_delta_w_max(w_irena):.0e}')\n",
+    "print(f'SasView: {compute_delta_w_max(w_sasview):.0e}')\n",
+    "print(f'McSAS: {compute_delta_w_max(w_mcsas):.0e}')\n",
+    "print(f'FFSAS: {compute_delta_w_max(w_ffsas):.0e}')\n",
     "print()\n",
     "\n",
     "print('wct / sec')\n",
