--- a/examples/05_sphere_SAXS/sphere_SAXS.ipynb
+++ b/examples/05_sphere_SAXS/sphere_SAXS.ipynb
@@ -380,7 +380,7 @@
     "I_irena = np.loadtxt('irena/output_I(q).txt')\n",
     "chi2 = np.linalg.norm((mu[:len(I_irena)] - I_irena) / sigma[:len(I_irena)]) ** 2\n",
     "plt.plot(q[:len(I_irena)], I_irena, c=style_irena[0], ls=style_irena[1], lw=1.5, zorder=0,\n",
-    "         label=r'Irena-IPG/TNNLS: $\\chi^2$=%.2f (no high-$q$),' % (chi2))\n",
+    "         label=r'Irena (IPG/TNNLS): $\\chi^2$=%.2f (no high-$q$),' % (chi2))\n",
     "plt.plot(q[:len(I_irena)], I_irena, c='whitesmoke', ls=style_irena[1], lw=1.5, zorder=-10000000, \n",
     "         label=r'$\\hat{w}\\approx60\\%\\mathcal{N}(620, 39^2)+40\\%\\mathcal{N}(1066, 38^2)$')\n",
     "\n",
@@ -430,8 +430,10 @@
     "\n",
     "# add some texts for paper\n",
     "plt.axvline(0.008, c='k', lw=1, ymin=.8)\n",
+    "plt.axvline(0.03, c='k', lw=1, ymin=.8)\n",
     "plt.text(0.004, 1e3, r'low-$q$', va='top')\n",
-    "plt.text(0.035, 1e3, r'high-$q$', va='top', ha='center')\n",
+    "plt.text(0.013, 1e3, r'mid-$q$', va='top')\n",
+    "plt.text(0.07, 1e3, r'high-$q$', va='top', ha='center')\n",
     "plt.text(0.06, 10, r'Raw intensity mean', va='top', ha='center')\n",
     "plt.plot([0.05, 0.04], [1.5, 0.1], c='k', lw=1)\n",
     "\n",
